# deutschetelekom-simul

./: .env  .env.example  .gitignore  Coincidence_counts.py  DEVICE_SETUP.md  HYBRID_SETUP_GUIDE.md  MODE_CONFIG.md  README.md  README_NETWORK_SETUP.md  Test_code.py  bridge.py  config.json  device_controller.py  experiment.py  four.py  intro_pol_controllers.ipynb  laptop_server.js  main.js  package-lock.json  package.json  pyproject.toml  rdp_client.js  requirements-bridge.txt  requirements.txt  server.js  server.py  test_client.py
backup/: four.py  package.json
public/: index.html  style.css
