[project]
name = "T-LabsxMOTH"
version = "2.0.0"
description = "Woring with ThorLabs hardware and TimeTagger, it will lead audiovisual."
authors = [
    {name = "MOTH Quantum",email = "astryd@mothquantum.com"}
]
requires-python = ">=3.12"
dependencies = [
]


[dependency-groups]
bridge = [
    "flask>=3.1.3",
    "flask-cors>=5.0.0",
    "numpy>=2.4.2",
]
